--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- Top Announcement Ticker -->
     <div class="top-ticker">
         <div class="ticker-content">
-            <span>ADMISSIONS ARE OPEN FOR THE 2025-26 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224 • ONLY
+            <span>ADMISSIONS ARE OPEN FOR THE 2026 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224 • ONLY
                 FOR LADIES • PIONEER IN RAYALASEEMA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <span>ADMISSIONS ARE OPEN FOR THE 2025-26 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224• ONLY
+            <span>ADMISSIONS ARE OPEN FOR THE 2026 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224• ONLY
                 FOR LADIES • PIONEER IN RAYALASEEMA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         </div>
     </div>
@@ -496,7 +496,7 @@
                         <div class="icon-box me-3"><i class="fas fa-phone-alt"></i></div>
                         <div>
                             <h5 class="mb-1">Admissions & Details</h5>
-                            <p class="text-muted">77998 02224, 77993 02224</p>
+                            <p class="text-muted">77993 02224 , 77998 02224</p>
                         </div>
                     </div>
                     <div class="contact-info d-flex mb-4">
