Added 'Your Message' field back to admission form and updated logic

--- a/index.html
+++ b/index.html
@@ -655,6 +655,14 @@
                                         placeholder="Specify Newspaper name or other details">
                                 </div>
 
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label class="small text-gold text-uppercase fw-bold mb-1">Your Message</label>
+                                        <textarea id="formMessage" class="form-control custom-input py-2" rows="3"
+                                            placeholder="Tell us about your interests..."></textarea>
+                                    </div>
+                                </div>
+
                                 <div class="col-md-12 mt-4">
                                     <button type="submit"
                                         class="btn btn-dark w-100 py-3 text-uppercase fw-bold ls-wide luxe-btn">
