Added 'Existing Student' status to admission form and logic

--- a/index.html
+++ b/index.html
@@ -627,6 +627,25 @@
                                     </div>
                                 </div>
 
+                                <!-- Current Status -->
+                                <div class="col-md-12">
+                                    <label class="small text-gold text-uppercase fw-bold mb-2 d-block">Are you currently
+                                        a student at Vinnar?</label>
+                                    <div class="d-flex gap-4 mb-3">
+                                        <div class="form-check small">
+                                            <input class="form-check-input" type="radio" name="currentStatus"
+                                                value="Yes" id="statusYes">
+                                            <label class="form-check-label" for="statusYes">Yes (Existing
+                                                Student)</label>
+                                        </div>
+                                        <div class="form-check small">
+                                            <input class="form-check-input" type="radio" name="currentStatus" value="No"
+                                                id="statusNo" checked>
+                                            <label class="form-check-label" for="statusNo">No (New Admission)</label>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <!-- Referral -->
                                 <div class="col-md-12">
                                     <label class="small text-gold text-uppercase fw-bold mb-2 d-block">How did you know
