--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                                 <!-- Current Status -->
                                 <div class="col-md-12">
                                     <label class="small text-gold text-uppercase fw-bold mb-2 d-block">Are you currently
-                                        a student at Vinnar?</label>
+                                        filled at Vinnar institution?</label>
                                     <div class="d-flex gap-4 mb-3">
                                         <div class="form-check small">
                                             <input class="form-check-input" type="radio" name="currentStatus"
