Simplified Yes/No labels for student status

--- a/index.html
+++ b/index.html
@@ -635,13 +635,12 @@
                                         <div class="form-check small">
                                             <input class="form-check-input" type="radio" name="currentStatus"
                                                 value="Yes" id="statusYes">
-                                            <label class="form-check-label" for="statusYes">Yes (Existing
-                                                Student)</label>
+                                            <label class="form-check-label" for="statusYes">Yes</label>
                                         </div>
                                         <div class="form-check small">
                                             <input class="form-check-input" type="radio" name="currentStatus" value="No"
                                                 id="statusNo" checked>
-                                            <label class="form-check-label" for="statusNo">No (New Admission)</label>
+                                            <label class="form-check-label" for="statusNo">No</label>
                                         </div>
                                     </div>
                                 </div>
