--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                                 <div class="col-md-12 mt-4">
                                     <button type="submit"
                                         class="btn btn-dark w-100 py-3 text-uppercase fw-bold ls-wide luxe-btn">
-                                        Apply for Admission
+                                        Send via WhatsApp
                                     </button>
                                 </div>
                             </div>
