Enhanced Enquiry button with gold gradient, glow, and shimmer effects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <a class="navbar-brand" href="index.html">
                 <img src="assets/logo.png" alt="Vinnar Logo" class="navbar-logo">
             </a>
-            <a class="nav-link nav-enquiry-blink" href="#contact">Enquiry</a>
+            <a class="nav-link nav-enquiry-blink" href="#contact">
+                <i class="fab fa-whatsapp me-1"></i> Enquiry
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
