Updated Diploma Fashion syllabus with detailed course content

--- a/diploma-fashion.html
+++ b/diploma-fashion.html
@@ -117,116 +117,123 @@
             <div class="row text-center mb-5">
                 <div class="col-12">
                     <h2 class="section-title">Course <i>Syllabus</i></h2>
-                    <p class="text-muted">Master the art and science of fashion through our 6-module curriculum</p>
+                    <p class="text-muted">Master the art and science of fashion through our 5-module comprehensive
+                        curriculum</p>
                     <div class="title-underline mx-auto"></div>
                 </div>
             </div>
 
             <div class="row g-4">
-                <!-- Module 1 -->
+                <!-- Module 1: Fashion Illustration -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 syllabus-item custom-shadow">
                         <div class="module-number">01</div>
-                        <h4 class="text-gold mb-3">Fashion Fundamentals</h4>
-                        <ul class="list-unstyled text-muted">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Introduction to
-                                Fashion Industry</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Elements &
-                                Principles of Design</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Color Theory &
-                                Harmonies</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> History of World
-                                Fashion</li>
+                        <h4 class="text-gold mb-3">Fashion Illustration</h4>
+                        <div class="small text-muted mb-3 italic">Fundamental drawing, shading, and rendering fashion
+                            figures and garments.</div>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Basics:</strong> Shading, 2D/3D Forms, Value & Pointing</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Theory:</strong> Color Wheel, Tints/Tones, Schemes</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Principles:</strong> Rendering strokes, Motifs, Repeats</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Croquis:</strong> 10-Head Figure, Flesh figure, Poses</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Categories:</strong> Casual, Formal, Ethnic, Beach wear</li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Module 2 -->
-                <div class="col-md-6 col-lg-4">
+                <!-- Module 2: Pattern Making -->
+                <div class="col-md-6 col-lg-8">
                     <div class="syllabus-card p-4 syllabus-item custom-shadow">
                         <div class="module-number">02</div>
-                        <h4 class="text-gold mb-3">Textile Science</h4>
-                        <ul class="list-unstyled text-muted">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Fiber to Fabric
-                                Journey</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Weaving & Knitting
-                                Techniques</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Fabric
-                                Identification & Care</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Dying & Printing
-                                Methods</li>
-                        </ul>
+                        <h4 class="text-gold mb-3">Pattern Making & Construction</h4>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h6 class="text-dark fw-bold mb-2">Kids Wear</h6>
+                                <ul class="list-unstyled text-muted small">
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Kids Kurthi &
+                                        Long Frock</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Lehanga & Jump
+                                        Suits</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Basic & Hand
+                                        Seams</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h6 class="text-dark fw-bold mb-2">Women's Wear</h6>
+                                <ul class="list-unstyled text-muted small">
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Kurthi & Frocks
+                                        (Types 1-4)</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Blouses (7
+                                        Styles) & Bottoms</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Patiala, Palazzo,
+                                        Straight Pants</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Module 3 -->
+                <!-- Module 3: Embroidery -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 syllabus-item custom-shadow">
                         <div class="module-number">03</div>
-                        <h4 class="text-gold mb-3">Garment Construction</h4>
-                        <ul class="list-unstyled text-muted">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Basic Machine
-                                Operations</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Pattern Making
-                                Foundation</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Stitching
-                                Techniques (Basics)</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Standard
-                                Measurements Guide</li>
+                        <h4 class="text-gold mb-3">Embroidery & Styling</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> <strong>Basic
+                                    Stitches:</strong> Stem, Chain, Satin, Split</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Advanced:</strong> Zardosi, French Knots, Woven Rose</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> <strong>Aari
+                                    Work:</strong> Specialized stitching techniques</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Hairstyles:</strong> French Braid, Buns, Free styles</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Art:</strong> Smocking, Appliqué, Calendar Art</li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Module 4 -->
+                <!-- Module 4: Beautician -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 syllabus-item custom-shadow">
                         <div class="module-number">04</div>
-                        <h4 class="text-gold mb-3">Fashion Illustration</h4>
-                        <ul class="list-unstyled text-muted">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Human Anatomy
-                                (Crosti)</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Sketching &
-                                Rendering</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Portfolio
-                                Development</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Design
-                                Conceptualization</li>
+                        <h4 class="text-gold mb-3">Professional Beautician</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Grooming:</strong> High-end Threading, Facial</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Makeup:</strong> Daily & Occasional Make-up Art</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Saree:</strong> Draping (2 styles) & Pre-pleating</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> <strong>Henna
+                                    Art:</strong> Professional Mehandi Designs</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Crafts:</strong> Professional Flower making</li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Module 5 -->
+                <!-- Module 5: Adobe Illustrator -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 syllabus-item custom-shadow">
                         <div class="module-number">05</div>
-                        <h4 class="text-gold mb-3">Creative Artistry</h4>
-                        <ul class="list-unstyled text-muted">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Hand Embroidery &
-                                Zardosi</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Surface
-                                Ornamentation</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Accessory
-                                Designing</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Fashion Craft
-                                Workshop</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Module 6 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="syllabus-card p-4 syllabus-item custom-shadow">
-                        <div class="module-number">06</div>
-                        <h4 class="text-gold mb-3">Industry Readiness</h4>
-                        <ul class="list-unstyled text-muted">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Fashion Marketing
-                                101</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Boutique
-                                Management</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Visual
-                                Merchandising</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i> Final Design
-                                Project</li>
+                        <h4 class="text-gold mb-3">Digital Fashion (AI)</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Digital:</strong> Intro to Adobe Illustrator tools</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Repeats:</strong> Brick, Ogee, Tossed patterns</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Projects:</strong> Flat sketches, Trouser, Blazers</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Boutique:</strong> Logo, Business card, Spec-sheets</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Effects:</strong> Pearl/Sequence Jewelry rendering</li>
                         </ul>
                     </div>
                 </div>
