--- a/index.html
+++ b/index.html
@@ -200,13 +200,17 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3">
-                    <div class="course-card custom-shadow h-100">
-                        <div class="p-4 bg-white text-center">
-                            <h5 class="text-dark fw-bold mb-3">Advanced Diploma in Fashion Technology</h5>
-                            <hr class="gold-hr mx-auto">
-                            <p class="badge bg-gold text-dark px-3 py-2">2 Years</p>
+                    <a href="advanced-diploma-fashion.html" class="text-decoration-none h-100 d-block">
+                        <div class="course-card custom-shadow h-100">
+                            <div class="p-4 bg-white text-center">
+                                <h5 class="text-dark fw-bold mb-3">Advanced Diploma in Fashion Technology</h5>
+                                <hr class="gold-hr mx-auto">
+                                <p class="badge bg-gold text-dark px-3 py-2">2 Years</p>
+                                <div class="mt-3 small text-gold fw-bold">View Syllabus <i
+                                        class="fas fa-arrow-right ms-1"></i></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <a href="diploma-fashion.html" class="text-decoration-none h-100 d-block">
