Relabeled syllabus sections as Year 1 and Year 2

--- a/advanced-diploma-fashion.html
+++ b/advanced-diploma-fashion.html
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col-12">
-                    <div class="text-gold fw-bold text-uppercase ls-wide mb-2">Phase 01</div>
+                    <div class="text-gold fw-bold text-uppercase ls-wide mb-2">Year 01 Syllabus</div>
                     <h2 class="section-title">Foundation & <i>Techniques</i></h2>
                     <p class="text-muted">Mastering the essentials of fashion, tailoring, and digital design</p>
                     <div class="title-underline mx-auto"></div>
@@ -201,7 +201,7 @@
 
             <div class="row text-center mb-5">
                 <div class="col-12">
-                    <div class="text-gold fw-bold text-uppercase ls-wide mb-2">Phase 02</div>
+                    <div class="text-gold fw-bold text-uppercase ls-wide mb-2">Year 02 Syllabus</div>
                     <h2 class="section-title">Professional <i>Specialization</i></h2>
                     <p class="text-muted">Advanced tailoring, men's wear, bridal beauty, and industry theory</p>
                     <div class="title-underline mx-auto"></div>
